@@ -46,14 +46,13 @@ public final class NativeUtils {
         if (pointer.equals(MemorySegment.NULL)) {
             return null;
         }
-        var segment = MemorySegment.ofAddress(pointer.address(), Long.MAX_VALUE, pointer.scope());
-        return segment.getUtf8String(0);
+        return pointer.reinterpret(Long.MAX_VALUE).getUtf8String(0);
     }
 
     /**
      * The lookup to use when finding symbols to the Wooting SDK.
      */
-    private static final SymbolLookup LOOKUP = SymbolLookup.libraryLookup(Path.of("/home/gudenau/projects/java/games/CaveGame/external/wooting-analog-sdk/wrapper/libwooting_analog_wrapper.so"), SegmentScope.global());
+    private static final SymbolLookup LOOKUP = SymbolLookup.libraryLookup(Path.of("/home/gudenau/projects/java/games/CaveGame/external/wooting-analog-sdk/wrapper/libwooting_analog_wrapper.so"), Arena.global());
     /**
      * The linker to use when interfacing with the Wooting SDK.
      */
